fix: increase z-index of topbar

--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -27,7 +27,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 50;
   transition: transform 0.4s;
   @include breakpoint(small only) {
     &.mobile-hidden {
